package com.acme.oop.sales.domain.model.aggregates;

public class SalesOrder {
}
