package com.acme.oop.shared.domain.model.valueobjects;

public record CustomerId() {
}
